--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -1,8 +1,8 @@
 on:
   workflow_dispatch:
   schedule:
-    # Runs every hour
-    - cron: '0 * * * *'
+    # Runs everyday
+    - cron: '0 0 * * *'
 
 jobs:
   update-readme:
